Fixed jumping form elements borders.

--- a/components/01-atoms/select/select.scss
+++ b/components/01-atoms/select/select.scss
@@ -19,11 +19,9 @@
   @include ct-form-control-disabled($ct-select-disabled-opacity);
   @include ct-typography($_label-size);
 
-  box-sizing: content-box;
   border-radius: $ct-select-border-radius;
   border-style: solid;
   border-width: $_border-width;
-  margin: $_hover-border-width - $_border-width $_hover-border-width - $_border-width;
   padding: ct-spacing(1.625) $_vertical-padding;
   width: 100%;
 
@@ -32,17 +30,10 @@
   background-repeat: no-repeat;
   background-size: $_icon-height;
 
-  &:hover {
-    border-width: $_hover-border-width;
-    margin: 0;
-  }
-
   &:focus-visible {
     outline-style: solid;
     outline-width: $ct-select-outline-width;
     outline-offset: $ct-select-outline-offset;
-    margin: 0;
-    border-width: $_hover-border-width;
   }
 
   @include ct-component-theme($root) using($root, $theme) {
@@ -81,6 +72,7 @@
         @include ct-component-property($root, $theme, hover, color);
         @include ct-component-property($root, $theme, hover, border-color);
         @include ct-component-property($root, $theme, hover, background-color);
+        @include ct-form-control-border-inset(ct-component-var($root, $theme, hover, border-color), $_hover-border-width - $_border-width);
       }
 
       &:focus-visible {
@@ -94,6 +86,7 @@
       @include ct-component-property($root, $theme, invalid, color);
       @include ct-component-property($root, $theme, invalid, border-color);
       @include ct-component-property($root, $theme, invalid, background-color);
+      @include ct-form-control-border-inset(ct-component-var($root, $theme, invalid, border-color), $_hover-border-width - $_border-width);
 
       &::placeholder {
         @include ct-component-property($root, $theme, invalid, color);
