--- a/components/01-atoms/textarea/textarea.scss
+++ b/components/01-atoms/textarea/textarea.scss
@@ -15,7 +15,6 @@
   border-radius: $ct-textarea-border-radius;
   border-style: solid;
   border-width: $_border-width;
-  margin: $_hover-border-width - $_border-width $_hover-border-width - $_border-width;
   padding: ct-spacing(1.625) ct-spacing(2);
   width: 100%;
 
@@ -23,17 +22,10 @@
   // inline-block element.
   vertical-align: bottom;
 
-  &:hover {
-    border-width: $_hover-border-width;
-    margin: 0;
-  }
-
   &:focus-visible {
     outline-style: solid;
     outline-width: $ct-textarea-outline-width;
     outline-offset: $ct-textarea-outline-offset;
-    margin: 0;
-    border-width: $_hover-border-width;
   }
 
   @include ct-component-theme($root) using($root, $theme) {
@@ -54,6 +46,7 @@
         @include ct-component-property($root, $theme, hover, color);
         @include ct-component-property($root, $theme, hover, border-color);
         @include ct-component-property($root, $theme, hover, background-color);
+        @include ct-form-control-border-inset(ct-component-var($root, $theme, hover, border-color), $_hover-border-width - $_border-width);
       }
 
       &:focus-visible {
@@ -67,6 +60,7 @@
       @include ct-component-property($root, $theme, invalid, color);
       @include ct-component-property($root, $theme, invalid, border-color);
       @include ct-component-property($root, $theme, invalid, background-color);
+      @include ct-form-control-border-inset(ct-component-var($root, $theme, invalid, border-color), $_hover-border-width - $_border-width);
 
       &::placeholder {
         @include ct-component-property($root, $theme, invalid, color);
